--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'news/style.css' %}" />
+    <!--link rel="stylesheet" type="text/css" href="{% static 'news/style.css' %}" /-->
   </head>
 
   <body>
@@ -41,6 +41,8 @@
       </div><!-- /.container -->
     </nav><!-- /.navbar -->
     <hr />
+
+
     <div class="container">
 
       <div class="row row-offcanvas row-offcanvas-right">
